# project_mir

./: .cz.toml  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/tex/: bibliography.bib  main.tex  rapport.cls  setup.tex
src/tex/tex/: 00-01_firstpage.tex  00-02_resume.tex  00-03_introduction.tex  01_section1.tex  02_section2.tex  03_section3.tex  99_conclusion.tex
templates/: .changelog_template.j2
